@@ -232,9 +232,8 @@ then terminating when the command execution completes. Implies
 supplied.
 .TP 
 \-X
-Enables executing of includes via \fB#exec\fR directive.
-This can be useful if You want to do \fB#exec\fR inside
-\*(T<\fIasterisk.conf\fR\*(T>
+Enables executing of includes via \fB#exec\fR directive inside
+\*(T<\fIasterisk.conf\fR\*(T>.
 .SH EXAMPLES
 \fBasterisk\fR - Begin Asterisk as a daemon
 .PP
